# resilient-cache

./: AGENTS.md  BACKEND_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  Makefile.windows  README.md  ROADMAP.md  pyproject.toml
examples/: basic_usage.py
src/resilient_cache/: SERIALIZERS.md  __init__.py  app_cache.py  cache_factory.py  cache_service.py  circuit_breaker.py  exceptions.py  flask_integration.py  serializers.py  two_level_cache.py
src/resilient_cache/backends/: __init__.py  base.py  redis_backend.py  ttl_cache_backend.py
src/resilient_cache/config/: __init__.py  utils.py
tests/: README.md  conftest.py
tests/integration/: test_valkey_backend_real.py
tests/unit/: test_backends.py  test_cache.py  test_cache_factory.py  test_cache_service_core.py  test_circuit_breaker.py  test_config.py  test_exceptions.py  test_flask_integration.py  test_interfaces.py  test_serializers.py  test_two_level_cache.py
